--- a/miao/css-selector-practise.html
+++ b/miao/css-selector-practise.html
@@ -218,11 +218,8 @@
       .prime{
         color: lightskyblue;
       }
-      .prime li:nth-child(2n),:nth-child(3n),:nth-child(5n),:nth-child(7n){
+      .prime li:nth-child(2n+4),:nth-child(3n+6),:nth-child(5n+10),:nth-child(7n+14){
         color:orange;
-      }
-      .prime li:nth-child(2),:nth-child(3),:nth-child(5),:nth-child(7){
-        color:lightskyblue
       }
     </style>
     <div class="prime">
