--- a/miao/block-basic.html
+++ b/miao/block-basic.html
@@ -37,6 +37,14 @@
     div:hover {
       margin: auto;
     }
+    section {
+      margin: auto;
+      height: 0;
+      width: 0;
+      border-bottom: 100px solid orange;
+      border-left: 100px solid transparent;
+      border-right: 100px solid transparent;
+    }
   </style>
   <body>
     <header>
