--- a/miao/css-block-layout.html
+++ b/miao/css-block-layout.html
@@ -19,7 +19,7 @@
       color: white;
     }
 
-    #d1,
+    #d1,#d2,
     p {
       width: 600px;
       margin: 0 auto;
@@ -71,6 +71,27 @@
       width: auto;
       text-align: center;
     }
+    #d2{
+      font-size: 0;
+    }
+    #d2> div{
+      font-size: small;
+      text-align: center;
+      line-height: 34px;
+      border: 3px solid #000;
+      background-color: pink;
+      display: inline-block; 
+      margin: 15px 30px 0 0;
+      height: 34px;
+      width: 174px;
+    }
+    #d2>div:hover{
+      
+      background-color: red;
+    }
+    #d2>div:nth-child(3n){
+      margin-right: 0;
+    }
   </style>
 </head>
 
@@ -92,6 +113,13 @@
     <div>边框宽度3px</div>
     <div>产品</div>
     <div>产品
+    </div>
+  </div>
+  <div id="d2">
+    <div>宽180高40(包含边框)</div>
+    <div>产品</div>
+    <div>产品</div>
+    <div>水平间隙30px</div><div>产品</div><div>产品</div><div>垂直间隙15px</div><div>产品</div><div>产品</div><div>边框宽度3px</div><div>产品</div><div>产品
     </div>
   </div>
   <p class="p3">link</p>
