--- a/miao/ios-checkbox.html
+++ b/miao/ios-checkbox.html
@@ -22,7 +22,7 @@
         box-shadow: 2px 2px 2px grey;
       }
       .circle {
-        transition: margin 0.3s, padding 0.3s;
+        transition: margin 0.5s 0.1s, padding 0.5s;
         background-color: white;
         margin-left: 10px;
         height: 135px;
@@ -32,7 +32,7 @@
       }
       main {
         z-index: -1;
-        transition: 0.3s;
+        transition: 0.5s 0.1s;
         position: absolute;
         top: -1px;
         left: -2px;
@@ -46,17 +46,18 @@
         border-radius: 80px;
       }
       input:checked + label > main {
-        transition: transform 0.4s;
+        transition: transform 0.5s 0.1s;
         transform: scale(0, 0);
       }
       input:checked + label > .circle {
-        transition: margin 0.3s 0.1s, padding 0.3s;
+        transition: margin 0.5s 0.1s, padding 0.5s;
         margin: 0 10px 0 125px;
         padding: 2px 50px;
       }
     </style>
   </head>
   <body>
+    <h1>第二版</h1>
     <input type="checkbox" style="display: none" name="" id="switch" />
     <label for="switch">
       <div class="circle"></div>
