modify io-checkbox again

--- a/miao/ios-checkbox.html
+++ b/miao/ios-checkbox.html
@@ -6,70 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      input {
-        /* display: none; */
-      }
       label {
         transition: 0.5s 0.22s;
         display: block;
-        /* border: 3px solid rgb(121, 121, 121); */
         height: 160px;
         width: 280px;
         border-radius: 85px;
-        position: relative;
-        background-color: #30f34b;
-        overflow: hidden;
-        box-shadow: -2px -2px 8px rgb(160, 160, 160),
-          -2px -2px 12px rgba(255, 255, 255, 0.5),
-          inset 2px 2px 4px rgba(255, 255, 255, 0.1),
-          2px 2px 8px rgba(0, 0, 0, 0.15);
+        background-color: rgb(153, 153, 153);
+        border: 3px solid rgb(153, 153, 153);
       }
-      .bg {
-        height: 100%;
-        width: 100%;
+      input:not([checked]) + label > .circle {
         background-color: white;
-        border-radius: 80px;
-        transition: transform 0.3s 0.2s;
+        height: 150px;
+        margin-top: 5px;
+        border-radius: 85px;
+        box-shadow: 0px 0px 10px 3px rgb(0, 0, 0, 0.4);
+        /* 以下是渐变属性 */
+        margin-left: 5px;
+        margin-right: 115px;
+        width: 150px;
+        transition: width 0.5s, padding 0.6s 0.1s, margin 0.6s;
       }
-      /* unchecked 状态的按钮 */
-      .circle {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        right: 0;
-        bottom: 0;
-        background-color: white;
-        height: 140px;
-        width: 140px;
-        border-radius: 50%;
-        box-shadow: -2px -2px 8px rgb(160, 160, 160),
-          -2px -2px 12px rgba(255, 255, 255, 0.5),
-          inset 2px 2px 4px rgba(255, 255, 255, 0.1),
-          2px 2px 8px rgba(0, 0, 0, 0.15);
-        transition: margin 0.4s, width 0.4s, padding-left 0.5s 0.22s,
-          padding-right 0.4s;
-      }
-      /* checked 状态的按钮 */
       input:checked + label > .circle {
-        margin-left: 120px;
-        padding-left: 40px;
-        padding-right: 40px;
-        width: 60px;
-        transition: margin 0.4s 0.22s, width 0.4s 0.22s, padding-right 0.5s,
-          padding-left 0.4s 0.22s;
-      }
-      input:checked + label > .bg {
-        transition: transform 0.5s 0.22s;
-        transform: scale(0, 0);
+        width: 110px;
+        padding: 0 20px;
+        margin-left: 125px;
+        margin-right: 5px;
+        transition: 0.6s 0.1s, padding 0.6s;
       }
       input:checked + label {
         border-color: #30f34b;
-        transition: 0.5s 0.22s;
+        box-shadow: inset 0px 0px 0px 80px #30f34b;
+        transition: 0.6s 0.05s;
       }
     </style>
   </head>
   <body>
-    <h1>顶不住了</h1>
+    <h1>究极版</h1>
     <hr />
     <input type="checkbox" name="" id="sw" />
     <label for="sw">
