--- a/miao/css-menu.html
+++ b/miao/css-menu.html
@@ -6,23 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      /* 公共部分 */
       * {
         padding: 0;
         margin: 0;
         box-sizing: border-box;
         font: 14px "微软雅黑";
       }
-      ul {
-        list-style: none;
-        box-shadow: 2px 2px 2px grey;
+      body {
+        background-color: silver;
       }
       li {
         position: relative;
+        list-style: none;
         padding: 3px 8px;
       }
       li:hover {
         background-color: rgb(0, 0, 0, 0.7);
       }
+      li:hover > ul > li {
+        visibility: visible;
+        transition: height 0.35s ease, visibility 0.3s 0.1s;
+        height: 24px;
+      }
+      ul:not(.top-items) {
+        visibility: hidden;
+      }
+      /* 顶部菜单和子菜单 */
       .menubar {
         position: relative;
         width: 100%;
@@ -38,10 +48,10 @@
       .top-items > li:hover {
         background-color: rgb(255, 255, 255, 0.2);
       }
+
       .v-items li {
         background-color: #222222;
         min-width: 240px;
-        visibility: hidden;
         height: 0px;
       }
       .v-items li:hover {
@@ -52,19 +62,25 @@
         top: 100%;
         left: 0;
       }
-      .l-items {
+
+      /* 横向拉开的菜单 */
+      .l-items > ul {
         position: absolute;
         top: 0;
         left: 100%;
       }
-      .v-items,
-      .v-items ul {
-        visibility: hidden;
+      li[short-key]::after {
+        content: attr(short-key);
+        position: absolute;
+        right: 5px;
+        /* height: 24px; */
+        margin-right: 5px;
       }
-      li:hover > ul > li {
-        height: 24px;
-        visibility: visible;
-        transition: height 0.3s ease, visibility 0.3s 0.1s;
+      .l-items::after {
+        content: ">";
+        font-weight: bold;
+        position: absolute;
+        right: 5px;
       }
     </style>
   </head>
@@ -75,29 +91,53 @@
         <li>
           文件(F)
           <ul class="v-items">
-            <li>新建文件</li>
-            <li>新建文件夹</li>
-            <li>打开文件</li>
-            <li>
+            <li short-key="Ctrl+N">新建文件</li>
+            <li short-key="Ctrl+K Ctrl+N">新建文件夹</li>
+            <li short-key="Ctrl+k Ctrl+O">打开文件</li>
+            <li class="l-items">
               打开最近的文件
-              <ul class="l-items">
+              <ul>
                 <li>C:/User/rainbow/inde.html</li>
+                <li>C:/User/rainbow/coding/test.html</li>
+                <li>C:/User/rainbow/download/fake.html</li>
+                <li>C:/User/rainbow/inde.html</li>
+                <li>C:/User/rainbow/inde.html</li>
+                <li>C:/User/rainbow/inde.html</li>
+                <li>C:/User/rainbow/coding/test.html</li>
+                <li>C:/User/rainbow/download/fake.html</li>
+                <li>C:/User/rainbow/coding/test.html</li>
+                <li>C:/User/rainbow/download/fake.html</li>
                 <li>C:/User/rainbow/coding/test.html</li>
                 <li>C:/User/rainbow/download/fake.html</li>
               </ul>
             </li>
-            <li>保存</li>
-            <li>另存为</li>
-            <li>
+            <li short-key="Ctrl+S">保存</li>
+            <li short-key="Ctrl+K Ctrl+S">另存为</li>
+            <li class="l-items">
               首选项
-              <ul class="l-items">
-                <li>设置</li>
+              <ul>
+                <li class="l-items">
+                  设置
+                  <ul>
+                    <li short-key="Ctrl + `">用户设置</li>
+                    <li>工作空间设置</li>
+                    <li>全局设置</li>
+                  </ul>
+                </li>
                 <li>联机服务设置</li>
-                <li>颜色主题</li>
+                <li class="l-items">
+                  颜色主题
+                  <ul>
+                    <li>xcode dark</li>
+                    <li>monochrome dark</li>
+                    <li>one dark pro</li>
+                    <li>default light</li>
+                  </ul>
+                </li>
                 <li>用户键盘映射</li>
               </ul>
             </li>
-            <li>退出</li>
+            <li short-key="Ctrl+Q">退出</li>
           </ul>
         </li>
         <li class="top-items">编辑(E)</li>
@@ -109,5 +149,6 @@
         <li class="top-itmes">帮助(H)</li>
       </ul>
     </div>
+    123
   </body>
 </html>
