--- a/miao/9-grid.html
+++ b/miao/9-grid.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,80 +9,95 @@
 </head>
 
 <body>
-<div id="d1">
+  <div id="d1">
 
-  <pre><code>
+    <pre><code>
   //  使用float
   </code></pre>
-  <div class="top">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div class="top">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
   </div>
-</div>
 
-<div id="d2">
-  <pre>
+  <div id="d2">
+    <pre>
     <code>//使用table</code>
   </pre>
-  <table>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-  </table>
-</div>
+    <table>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
+  </div>
 
-<div id="d3">
-<pre><code>
+  <div id="d3">
+    <pre><code>
 //使用 inline-block
 </code></pre>
-  <div id="someid">
-    <div>
-      <div></div>
-    </div>
-    <div>
-      <div></div>
-    </div>
-    <div>
-      <div></div>
-    </div>
-    <div>
-      <div></div>
-    </div>
-    <div>
-      <div></div>
-    </div>
-    <div>
-      <div></div>
-    </div>
-    <div>
-      <div></div>
-    </div>
-    <div>
-      <div></div>
-    </div>
-    <div>
-      <div></div>
+    <div id="someid">
+      <div>
+        <div></div>
+      </div>
+      <div>
+        <div></div>
+      </div>
+      <div>
+        <div></div>
+      </div>
+      <div>
+        <div></div>
+      </div>
+      <div>
+        <div></div>
+      </div>
+      <div>
+        <div></div>
+      </div>
+      <div>
+        <div></div>
+      </div>
+      <div>
+        <div></div>
+      </div>
+      <div>
+        <div></div>
+      </div>
     </div>
   </div>
-</div>
+
+  <hr style="margin-top:20px;">
+  <pre><code> 使用父元素背景和子元素造成的视差</code></pre>
+  <div class="type3">
+    <div class="dd"></div>
+    <div class="dd"></div>
+    <div class="dd"></div>
+    <div class="dd"></div>
+    <div class="dd"></div>
+    <div class="dd"></div>
+    <div class="dd"></div>
+    <div class="dd"></div>
+    <div class="dd"></div>
+  </div>
 </body>
+
 </html>
