modify all file

--- a/miao/ios-checkbox.html
+++ b/miao/ios-checkbox.html
@@ -29,14 +29,14 @@
         /* 以下是渐变属性 */
         margin-left: 0px;
         margin-right: 120px;
-        transition: margin-right 0.6s 0.1s, margin-left 0.6s;
-        background: center no-repeat url(./pics/呲牙.jpg);
+        /*transition: margin-right 0.6s 0.1s, margin-left 0.6s;*/
+        transition: margin-right 0.6s, margin-left 0.6s ;
       }
       input:checked + label > .circle {
-        background: center no-repeat url(./pics/呲牙.jpg);
         margin-left: 120px;
         margin-right: 0px;
-        transition: margin-right 0.6s, margin-left 0.6s 0.1s;
+        /*transition: margin-right 0.6s, margin-left 0.6s 0.1s; */
+        transition: margin-right 0.6s, margin-left 0.6s ;
       }
       input:checked + label {
         border-color: #30f34b;
