--- a/miao/qq-mail-inline.html
+++ b/miao/qq-mail-inline.html
@@ -8,7 +8,6 @@
   <style>
     body{
       font-size: 0px;
-      /* letter-spacing: 0; */
     }
     *{
       margin: 0;
@@ -41,9 +40,7 @@
       height: 2px;
     }
     main{
-      /* width: calc(100vw - 252px); */
-     margin:calc( -1 * (100vh - 72px)) 0 0 252px;
-
+      width: calc(100% - 252px);
       height: calc(100vh - 72px);
       background-color:greenyellow;
       font-size: 40px;
