--- a/miao/twitter-heart.html
+++ b/miao/twitter-heart.html
@@ -18,7 +18,7 @@
       div {
         width: 495px;
       }
-      span:hover {
+      div:hover span {
         background-position: -2800px 0;
         transition: 1s steps(28);
       }
