--- a/miao/css-block-layout.html
+++ b/miao/css-block-layout.html
@@ -1,135 +1,145 @@
 <!DOCTYPE html>
 <!-- saved from url=(0054)https://pimingxin.github.io/miao/css-block-layout.html -->
 <html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <style>
+      * {
+        padding: 0px;
+        margin: 0px;
+      }
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <style>
-    * {
-      padding: 0px;
-      margin: 0px;
-    }
+      header {
+        background-color: #000;
+        color: white;
+      }
 
-    header {
-      background-color: #000;
-      color: white;
-    }
+      #d1,
+      #d2,
+      p {
+        width: 600px;
+        margin: 0 auto;
+      }
 
-    #d1,#d2,
-    p {
-      width: 600px;
-      margin: 0 auto;
-    }
-    
-    #d1>div:hover{
-      background-color: red;
-    }
+      #d1 > div:hover {
+        background-color: red;
+      }
 
-    #d1>div{
-      border: 3px inset #000;
-      background-color: pink;
-      height: 34px;
-      line-height: 34px;
-      text-align: center;
-      width: 174px;
-        margin-top:15px
-    }
-    #d1>div:nth-child(3n+2){
-      margin-left:210px;
-      margin-top:-40px;
-    }
+      #d1 > div {
+        border: 3px inset #000;
+        background-color: pink;
+        height: 34px;
+        line-height: 34px;
+        text-align: center;
+        width: 174px;
+        margin-top: 15px;
+      }
+      #d1 > div:nth-child(3n + 2) {
+        margin-left: 210px;
+        margin-top: -40px;
+      }
 
-    #d1>div:nth-child(3n+3){
+      #d1 > div:nth-child(3n + 3) {
+        margin-top: -40px;
+        margin-left: 420px;
+      }
 
-      margin-top:-40px;
-      margin-left:420px;
-    }
+      .p2 {
+        margin-top: 15px;
+      }
 
-    .p2 {
-      margin-top:15px;
-    }
-
-    .p3 {
-      border-bottom: 1px inset black;
+      .p3 {
+        border-bottom: 1px inset black;
         border-bottom-style: dotted;
-    }
-    div+p{
-      margin-top:20px;
-    }  
+      }
+      div + p {
+        margin-top: 20px;
+      }
 
-    .p4 {
-      border: 0;
-    }
+      .p4 {
+        border: 0;
+      }
 
-    .p5 {
-      margin-top: 20px;
-      background-color: #EE8AEE;
-      width: auto;
-      text-align: center;
-    }
-    #d2{
-      font-size: 0;
-    }
-    #d2> div{
-      font-size: small;
-      text-align: center;
-      line-height: 34px;
-      border: 3px solid #000;
-      background-color: pink;
-      display: inline-block; 
-      margin: 15px 30px 0 0;
-      height: 34px;
-      width: 174px;
-    }
-    #d2>div:hover{
-      
-      background-color: red;
-    }
-    #d2>div:nth-child(3n){
-      margin-right: 0;
-    }
-  </style>
-</head>
+      .p5 {
+        margin-top: 20px;
+        background-color: #ee8aee;
+        width: auto;
+        text-align: center;
+      }
+      #d2 {
+        font-size: 0;
+      }
+      #d2 > div {
+        font-size: small;
+        text-align: center;
+        line-height: 34px;
+        border: 3px solid #000;
+        background-color: pink;
+        display: inline-block;
+        margin: 15px 30px 0 0;
+        height: 34px;
+        width: 174px;
+      }
+      #d2 > div:hover {
+        background-color: red;
+      }
+      #d2 > div:nth-child(3n) {
+        margin-right: 0;
+      }
+    </style>
+  </head>
 
-<body style="">
-  <header>
-    <p class="p1">hello world 请调整浏览器窗口大小查看效果</p>
-  </header>
-  <p class="p2">页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px</p>
-  <div id="d1">
-    <div>宽180高40(包含边框)</div>
-    <div>产品</div>
-    <div>产品</div>
-    <div>水平间隙30px</div>
-    <div>产品</div>
-    <div>产品</div>
-    <div>垂直间隙15px</div>
-    <div>产品</div>
-    <div>产品</div>
-    <div>边框宽度3px</div>
-    <div>产品</div>
-    <div>产品
+  <body style="">
+    <header>
+      <p class="p1">hello world 请调整浏览器窗口大小查看效果</p>
+    </header>
+    <p class="p2">
+      页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体
+      宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px
+      页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体
+      宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px
+      页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体
+      宽度600px
+    </p>
+    <div id="d1">
+      <div>宽180高40(包含边框)</div>
+      <div>产品</div>
+      <div>产品</div>
+      <div>水平间隙30px</div>
+      <div>产品</div>
+      <div>产品</div>
+      <div>垂直间隙15px</div>
+      <div>产品</div>
+      <div>产品</div>
+      <div>边框宽度3px</div>
+      <div>产品</div>
+      <div>产品</div>
     </div>
-  </div>
-  <div id="d2">
-    <div>宽180高40(包含边框)</div>
-    <div>产品</div>
-    <div>产品</div>
-    <div>水平间隙30px</div><div>产品</div><div>产品</div><div>垂直间隙15px</div><div>产品</div><div>产品</div><div>边框宽度3px</div><div>产品</div><div>产品
+    <div id="d2">
+      <div>宽180高40(包含边框)</div>
+      <div>产品</div>
+      <div>产品</div>
+      <div>水平间隙30px</div>
+      <div>产品</div>
+      <div>产品</div>
+      <div>垂直间隙15px</div>
+      <div>产品</div>
+      <div>产品</div>
+      <div>边框宽度3px</div>
+      <div>产品</div>
+      <div>产品</div>
     </div>
-  </div>
-  <p class="p3">link</p>
+    <p class="p3">link</p>
 
-  <p class="p3">link </p>
-  <p class="p3">link</p>
+    <p class="p3">link</p>
+    <p class="p3">link</p>
 
-  <p class="p3">link</p>
-  <p class="p3 p4">link</p>
-  <p class="p5">©版权所有<br>本页所有布局均使用块元素</p>
-</body>
-
+    <p class="p3">link</p>
+    <p class="p3 p4">link</p>
+    <p class="p5">©版权所有<br />本页所有布局均使用块元素</p>
+  </body>
 </html>
