--- a/miao/css-font-text-practise.html
+++ b/miao/css-font-text-practise.html
@@ -6,7 +6,6 @@
     <title>JS Bin</title>
     <style>
       /* 只能在这里写css，不能改变页面的HTML结构 */
-
       h1 {
         font-size: 3em;
         text-align: center;
@@ -25,21 +24,24 @@
       }
       .b {
         font-size: 36px;
+        font-family: inherit ;
       }
       input {
-        /* font: inherit; */
+        font: inherit;
         font-size: 36px;
         text-transform: uppercase;
       }
       h2 {
         font-family: "Cascadia Mono", "宋体";
-        text-shadow: 0px 0px 5px rgb(65, 65, 65), 0px 0px 8px rgb(65, 65, 65);
+        text-shadow: 0px 0px 5px hsl(999, 70%, 70%),
+          0px 0px 8px hsl(999, 70%, 70%);
       }
       .c span {
         font-size: 1.5em;
       }
       .a {
         font: italic 2.5em no-serif;
+
         text-align: right;
       }
       .a > b {
@@ -48,10 +50,12 @@
       }
       .a > b > span {
         color: #ff00ff;
+        vertical-align:10px;
       }
-      .a > span {
+      .a > b {
         font-weight: bold;
         text-decoration: underline line-through;
+        color: red;
       }
       .d {
         font-family: "微软雅黑";
@@ -74,7 +78,7 @@
     </h2>
     <p class="a">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure
-      <b><span>suscipit</span></b> doloremque magnam delectus, reiciendis
+      <b>aaa<span>suscipit</span>aaa</b> doloremque magnam delectus, reiciendis
       architecto ipsam nihil numquam
       <span>nesciunt sapiente, accusantium, dolore.</span> Culpa repudiandae
       incidunt delectus. Officia, veritatis voluptas accusantium.
@@ -86,12 +90,7 @@
     </p>
 
     <p class="c">
-      <span
-        >aa
-        <span
-          >bb <span>cc <span></span>dd</span></span
-        ></span
-      >
+    <span>aa <span>bb<span>cc<span>dd</span></span></span>  </span>
     </p>
   </body>
 </html>
