--- a/miao/footer-at-bottom.html
+++ b/miao/footer-at-bottom.html
@@ -7,7 +7,6 @@
       body {
           padding: 0;
           margin: 0;
-		      position: static;
       }
 
       nav {
@@ -29,47 +28,53 @@
           font-size: 24px;
       }
 
-      main{
+      main {
           margin: auto;
       }
-      footer>p{
-		      width:50vw ;
-		     margin:auto;
+
+      footer > p {
+          width: 50vw;
+          margin: auto;
       }
-      footer{
-		      height: 100px;
-		      width: 100%;
-		      background-color: #F8F8F8;
-		      position: absolute;
-		      bottom:0;
+
+      footer {
+          height: 100px;
+          width: 100%;
+          background-color: #F8F8F8;
+          position: absolute;
+          bottom: 0;
       }
 
       code {
           color: #C7254E;
           background-color: #F9F2F4;
       }
+
       ul {
-		      padding:0 0 0 40px;
-		      margin:0 auto;
-		      font-size: 0;
+          padding: 0 0 0 40px;
+          margin: 0 auto;
+          font-size: 0;
       }
+
       li {
           display: inline-block;
           list-style-type: none;
-		      padding: 0 15px;
-		      font-size:1rem;
-		      height: 50px;
-		      line-height: 50px;
-		      min-width:50px;
+          padding: 0 15px;
+          font-size: 1rem;
+          height: 50px;
+          line-height: 50px;
+          min-width: 50px;
       }
-      li:hover{background-color: #dedede
+
+      li:hover {
+          background-color: #dedede
       }
-			@media (max-height:600px ) {
-				footer{
-						position: -webkit-sticky;
-						top:550px;
-				}
-			}
+
+      @media (max-height: 600px ) {
+          footer {
+              position:static;
+          }
+      }
 	</style>
 </head>
 <body>
@@ -88,12 +93,15 @@
 
 		Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A
 		fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>body > .container</code>.
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae cum dolorum ipsa quidem quo rerum unde. Dolorem
+		eaque, minima perferendis porro saepe vero. Dolores et ipsam nam tenetur! Facilis, quae.
+		<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis consectetur, consequuntur cum deserunt doloribus, ea, eaque eius est illo magnam neque nihil pariatur perferendis perspiciatis ratione saepe suscipit velit vero!</span><span>A accusantium aspernatur atque cupiditate dignissimos dolor earum error eum explicabo facilis ipsum laudantium officiis perspiciatis quae temporibus ut, voluptate! Earum illo minus nam! Dolorem doloremque porro possimus sint voluptas?</span><span>Aut blanditiis consequuntur corporis delectus deserunt fugit, magnam molestias nam omnis recusandae sequi, vel, veritatis voluptatem? Maxime quidem quo quos veritatis voluptate. Accusantium aut consequuntur delectus enim repellat! Accusantium, nobis.</span><span>A aliquid at, consequatur debitis eius eligendi est eveniet exercitationem facere facilis fugit hic id laboriosam laborum nam nesciunt nobis nostrum nulla perferendis quasi quibusdam reprehenderit sequi suscipit veniam vitae!</span><span>Aspernatur, commodi consequatur delectus dolores fugiat harum incidunt minima mollitia nulla soluta! Accusantium blanditiis deleniti, dolor eligendi fuga fugiat impedit iste magni molestias obcaecati, odio placeat praesentium ullam unde veniam?</span><span>A accusantium, asperiores aut consequatur delectus doloremque eligendi eos est excepturi fuga, illum incidunt neque, nobis nostrum odit optio perferendis possimus provident quae quasi quisquam quo quos reprehenderit vel voluptatum?</span><span>Accusantium error esse facilis, in iste perferendis quaerat sint velit! Aspernatur dolor eos perferendis voluptatum! Deleniti, eligendi eos, maiores minima mollitia perspiciatis porro reiciendis, rerum saepe temporibus ullam veniam voluptatum!</span><span>Adipisci, atque cumque eaque earum, id labore molestias quas qui quibusdam recusandae sunt ullam voluptates. Incidunt modi nostrum quasi! Dolore fugit harum ipsum minus molestiae quos saepe tempore temporibus vel.</span><span>Autem blanditiis cupiditate, impedit, laboriosam laborum minima neque, nulla numquam officia perspiciatis sed sequi totam vero! Deserunt dolorum iste natus, nemo nihil nisi quibusdam quo, reiciendis rerum saepe veritatis, voluptas.</span><span>Asperiores beatae dignissimos ea eveniet in iusto pariatur. Culpa cupiditate deleniti dicta dolore ea error esse ex impedit necessitatibus nobis possimus provident quia quidem, quis recusandae saepe tempore tenetur veniam.</span>
 	</p>
 </main>
 <footer>
-<p>
-	Place sticky footer content here.
-</p>
+	<p>
+		Place sticky footer content here.
+	</p>
 </footer>
 </body>
 </html>
