--- a/miao/footer-at-bottom.html
+++ b/miao/footer-at-bottom.html
@@ -6,6 +6,7 @@
 	<style>
       body {
           padding: 0;
+		      height: 100vh;
           margin: 0;
       }
 
@@ -41,7 +42,7 @@
           height: 100px;
           width: 100%;
           background-color: #F8F8F8;
-          position: absolute;
+          position: fixed;
           bottom: 0;
       }
 
