--- a/miao/radio-slider.html
+++ b/miao/radio-slider.html
@@ -25,8 +25,8 @@
           width: 100%;
           position: absolute;
           left: 100%;
-		      transition:left .3s;
-
+		      transition:left 0.3s;
+      }
       input:nth-child(1):checked ~ main > img:nth-child(1),
       input:nth-child(2):checked ~ main > img:nth-child(2),
       input:nth-child(3):checked ~ main > img:nth-child(3)
