modify mi files

--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -48,7 +48,7 @@
 <body>
 <!--指定锚点-->
 <div id="top"></div>
-<!--  site-top-bar begin-->
+  site-top-bar begin
 <nav class="site-top-bar">
 	<div class="container">
 		<ul class="list">
@@ -136,8 +136,8 @@
 		</div>
 		<div class="header-nav-box">
 			<ul class="header-nav">
-				<!--				<li class="li-space"><a href="#"></a></li>-->
-				<li><a href="#"><span class="text">小米手机</span></a>
+				<li class="header-nav-li"><a href="#"><span class="text">小米手机</span></a>
+					<div class="dropdown-box">
 						<div class="container">
 							<ul class="h-inner-ul">
 								<li class="hil">
@@ -174,8 +174,10 @@
 								</li>
 							</ul>
 						</div>
+					</div>
 				</li>
-				<li><a href="#"><span class="text">Redmi 红米</span></a>
+				<li class="header-nav-li"><a href="#"><span class="text">Redmi 红米</span></a>
+					<div class="dropdown-box">
 						<div class="container">
 							<ul class="h-inner-ul">
 								<li class="hil">
@@ -212,8 +214,10 @@
 								</li>
 							</ul>
 						</div>
+					</div>
 				</li>
-				<li><a href="#"><span class="text">电视</span></a>
+				<li class="header-nav-li"><a href="#"><span class="text">电视</span></a>
+					<div class="dropdown-box">
 						<div class="container">
 							<ul class="h-inner-ul">
 								<li class="hil">
@@ -250,8 +254,10 @@
 								</li>
 							</ul>
 						</div>
+					</div>
 				</li>
-				<li><a href="#"><span class="text">笔记本</span></a>
+				<li class="header-nav-li"><a href="#"><span class="text">笔记本</span></a>
+					<div class="dropdown-box">
 						<div class="container">
 							<ul class="h-inner-ul">
 								<li class="hil">
@@ -287,9 +293,11 @@
 									</div>
 								</li>
 							</ul>
+						</div>
 					</div>
 				</li>
-				<li><a href="#"><span class="text">家电</span></a>
+				<li class="header-nav-li"><a href="#"><span class="text">家电</span></a>
+					<div class="dropdown-box">
 						<div class="container">
 							<ul class="h-inner-ul">
 								<li class="hil">
@@ -326,8 +334,10 @@
 								</li>
 							</ul>
 						</div>
+					</div>
 				</li>
-				<li><a href="#"><span class="text">路由器</span></a>
+				<li class="header-nav-li"><a href="#"><span class="text">路由器</span></a>
+					<div class="dropdown-box">
 						<div class="container">
 							<ul class="h-inner-ul">
 								<li class="hil">
@@ -364,8 +374,10 @@
 								</li>
 							</ul>
 						</div>
+					</div>
 				</li>
-				<li><a href="#"><span class="text">智能硬件</span></a>
+				<li class="header-nav-li"><a href="#"><span class="text">智能硬件</span></a>
+					<div class="dropdown-box">
 						<div class="container">
 							<ul class="h-inner-ul">
 								<li class="hil">
@@ -397,11 +409,10 @@
 								</li>
 							</ul>
 						</div>
+					</div>
 				</li>
-				<li><a href="#"><span class="text">服务</span></a></li>
-				<li><a href="#"><span class="text">社区</span></a></li>
-				<li id="header-dropdown-box">
-				</li>
+<!--				<li id="header-dropdown-box">-->
+<!--				</li>-->
 			</ul>
 		</div>
 		<div class="header-search">
